Fixed footer alignment/icons, added extra 3 tiles to homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,15 @@ module: {
   ]
 }
 
+.card-columns {
+  @include media-breakpoint-only(lg) {
+    column-count: 4;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 5;
+  }
+}
+
+.socialmedia-links {
+  display: inline;
+}
